<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">QuickShareMail</string>

  <string name="notify_remain">Now sending %1$d Email(s), %2$d Emals(s) are waiting to resend.</string>
  <string name="notify_remain_rest">Now sending %d Email(s).</string>
  <string name="notify_remain_retry">%d Email(s) are waiting to resend.</string>
  <string name="notify_invalid_addr">There is invalid recipient address.</string>

  <string name="msg_fail_send">Failed to send email.\n%s</string>
  <string name="msg_fail_send_security">Permission denined.</string>
  <string name="msg_invalid_addr">Invalid recipient : %s</string>

  <string name="address_separator">", "</string>

  <string name="title_select_sendto">Choose recipient</string>
  <string name="title_enter_runtime_text">Enter text</string>

  <string name="msg_need_setup">Need to setup for sending.\nChange setting?</string>
  <string name="msg_sendto_notfound">Specified data type is not set to send.\nChange setting?\nData type : %s</string>
  <string name="msg_unsupported_intent">Unsupported data content.</string>
  <string name="msg_fail_read_sendinfo">Failed to retrieve sending information.</string>
  <string name="msg_config_send_to">Configure Recipient</string>
  <string name="msg_fail_request">Failed to process request.</string>

  <string name="title_pref_setting_cat">Setting</string>
  <string name="title_pref_operation_cat">Operation</string>

  <string name="title_pref_send_from">Sender setting</string>
  <string name="title_pref_mail_from">Sender email address</string>
  <string name="title_pref_smtp">SMTP Setting</string>
  <string name="title_pref_smtp_server">SMTP server</string>
  <string name="title_pref_smtp_port">Port</string>
  <string name="title_pref_smtp_sec">Security type</string>
  <string name="title_pref_smtp_auth_cat">SMTP AUTH</string>
  <string name="title_pref_smtp_auth">Use SMTP AUTH</string>
  <string name="title_pref_smtp_user">Username</string>
  <string name="title_pref_smtp_pass">Password</string>

  <string name="summary_def_pref_mail_from">Sender address is not set</string>
  <string name="summary_def_pref_smtp_server">SMTP Server is not set</string>
  <string name="summary_def_pref_smtp_port">Port is not set</string>
  <string name="summary_pref_smtp_auth">When required sign-in</string>
  <string name="summary_def_pref_smtp_user">Username is not set</string>
  <string name="summary_pref_smtp_pass">Password setting</string>

  <string name="title_pref_smtp_ask_gmail">Using Gmail</string>
  <string name="msg_pref_smtp_ask_gmail">Change SMTP server setting for Gmail?</string>
  <string name="msg_pref_smtp_port">Invalid port number.</string>
  <string name="title_pref_smtp_ask_sec_port">Change port</string>
  <string name="msg_pref_smtp_ask_sec_ssl">Change port for SMTP over SSL (465)?</string>
  <string name="msg_pref_smtp_ask_sec_submission">Change port for SMTP submission (587)?</string>

  <string name="title_pref_send_to">Recipient setting</string>
  <string name="title_pref_send_to_list">Recipient</string>
  <string name="title_pref_send_to_always_show">Always select Recipient</string>
  <string name="title_pref_send_to_add">Add Recipient</string>
  <string name="title_pref_send_to_delete">Delete Recipient</string>

  <string name="summary_pref_send_to_always_show">Show if also single choice</string>
  <string name="summary_pref_send_to_item_format">Data type : %1$s\nAddress : %2$s</string>

  <string name="msg_send_to_no_address">Recipient address is not set.</string>
  <string name="msg_send_to_delete">Delete Recipient \"%s\"?</string>
  <string name="msg_send_to_init">All current settings will be discard.\nInitialize Recipient setting?</string>

  <string name="menu_send_to_edit">Edit Recipient</string>
  <string name="menu_send_to_delete">Delete Recipient</string>
  <string name="menu_send_to_add">Add Recipient</string>
  <string name="menu_send_to_init">Reset to initial setting</string>

  <string name="title_pref_send_to_detail">Edit Recipient</string>
  <string name="title_pref_send_to_detail_enable">Enable this Recipient</string>
  <string name="title_pref_send_to_detail_label">Display name</string>
  <string name="title_pref_send_to_detail_type">Data type</string>
  <string name="title_pref_send_to_detail_subject">Subject</string>
  <string name="title_pref_send_to_detail_body">Message body (when sending attach file)</string>
  <string name="title_pref_send_to_detail_priority">Display priority</string>
  <string name="title_pref_send_to_detail_alternate">Use only for alternative</string>
  <string name="title_pref_send_to_detail_address">Recipient address</string>
  <string name="title_pref_send_to_detail_add">Add address</string>
  <string name="title_pref_send_to_detail_edit">Edit address</string>
  <string name="title_pref_send_to_detail_delete">Delete address</string>

  <string name="summary_pref_send_to_detail_enable">Set selectable this Recipient when data type match</string>
  <string name="summary_pref_send_to_detail_alternate">Use only when there is no other matched Recipient.</string>

  <string name="msg_send_to_detail_label_zero_len">Display name is not specified.</string>
  <string name="msg_send_to_detail_prority_invalid">Invalid display priority.</string>
  <string name="msg_send_to_detail_address_zero_len">Address is not specified.</string>
  <string name="msg_send_to_detail_address_invalid">Address is not valid.\n%s</string>
  <string name="msg_send_to_detail_delete">Delete address \"%s\"?</string>

  <string name="title_pref_misc">Other settings</string>
  <string name="title_pref_show_progress">Show on notification bar when sending</string>
  <string name="title_pref_expand_url">Expand short URL</string>
  <string name="title_pref_expand_title">Retrieve title of linked page</string>

  <string name="title_retry_send">Resend email</string>
  <string name="title_ask_retry_send">Resend</string>

  <string name="summary_pref_show_progress">Show icon on notification bar when sending email</string>
  <string name="summary_pref_expand_url">Expand short URL in text, and append expanded information</string>
  <string name="summary_pref_expand_title">Retrieve title of URL in text, and append expanded information</string>

  <string name="msg_no_retry">No more emails need to resend.</string>
  <string name="msg_ask_retry">There are %d email(s) waiting for resend.\nResend email?</string>
  <string name="button_delete_all">Discard all</string>

  <string name="menu_send_to_address_edit">Edit address</string>
  <string name="menu_send_to_address_delete">Delete address</string>
  <string name="menu_send_to_address_add">Add address</string>

  <string name="text_format_select">...</string>
  <string name="title_format_select">Select format string</string>
  <string name="menu_format_select_seqid" formatted="false">%i - Sequential number</string>
  <string name="menu_format_select_snipbody" formatted="false">%s - First 40 characters of message body</string>
  <string name="menu_format_select_filename" formatted="false">%f - File name</string>
  <string name="menu_format_select_title" formatted="false">%t - \"%s\" or \"%f\"</string>
  <string name="menu_format_select_time" formatted="false">%T - Time \"hh:mm:ss\"</string>
  <string name="menu_format_select_date" formatted="false">%D - Date \"YYYY/MM/DD\"</string>
  <string name="menu_format_select_entertext" formatted="false">%r - Entering text at run time</string>

  <string name="initial_label_text">Text</string>
  <string name="initial_label_image">Image</string>
  <string name="initial_label_movie">Video</string>
  <string name="initial_label_any">Any type</string>

  <string name="initial_subject_format" formatted="false">[QuickShareMail %i] %t</string>
  <string name="initial_body_format">%f</string>

  <string name="http_user_agent">QuickShareMail/%1$s (Android %2$s; %3$s Build/%4$s)</string>
</resources>
